Fix last child padding issue on mobile

--- a/src/ReplayRecord.css
+++ b/src/ReplayRecord.css
@@ -151,7 +151,6 @@
   }
 
   .ReplayRecord:last-child {
-    padding-top: 4px;
     padding-bottom: 8px;
   }
 
